--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
  </head>
  <body>
     <header>
-    <!--Seccion principal, sus etiquetas-->
+    <!--Seccion navegable, sus etiquetas-->
     <nav class="navbar navbar-expand-lg bg-jhonnie">
         <div class="container-fluid">
           <a class="navbar-brand" href="#"><img src="assets/logo-header.jpg" alt=""></a>
@@ -37,6 +37,7 @@
       </nav>
 
 </header>
+
     <h1>Johnnie Walker®</h1>
     <p class="slogan">Juntos hacia adelante...<p>
         <!--Uso de GRIDS -->
