agregue favicon y metas

--- a/html/gold-label.html
+++ b/html/gold-label.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Meta keywords-->
+    <meta name="keywords" content="whisky, whiskey, bebidas, alcohol, licor, labels, tragos, Jhonnie, Walker, etiqueta, dorada, gold, escoces, scotch">
+    <!--Meta description-->
+    <meta name="description" content="Johnnie Walker Gold Label es un whisky escocés blended de lujo, reconocido por su elegancia y suavidad excepcional. Elaborado con una mezcla de whiskies de malta y grano envejecidos durante un mínimo de 18 años en barricas de roble.">
+    <!--Favicon-->
+    <link rel="shortcut icon" href="./assets/favicon-jhonnie.jpg" type="image/x-icon">
     <title>Jhonnie Walker | Gold Label</title>
 </head> <link rel="stylesheet" href="../css/style.css">
 <body>
