--- a/html/red-label.html
+++ b/html/red-label.html
@@ -4,6 +4,12 @@
     <link rel="stylesheet" href="../css/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Meta keywords-->
+    <meta name="keywords" content="whisky, whiskey, bebidas, alcohol, licor, labels, tragos, Jhonnie, Walker, etiqueta, red, roja, escoces, scotch">
+    <!--Meta description-->
+    <meta name="description" content="Johnnie Walker Red Label es un whisky escocés blended reconocido mundialmente por su sabor distintivo y suavidad. Es una mezcla de whiskies de grano y malta seleccionados, envejecidos en barricas de roble, que le confieren un carácter equilibrado con notas dulces, especiadas y ahumadas.">
+    <!--Favicon-->
+    <link rel="shortcut icon" href="./assets/favicon-jhonnie.jpg" type="image/x-icon">
     <title>Jhonnie Walker | Red Label</title>
 </head>
 <body>
