--- a/html/black-label.html
+++ b/html/black-label.html
@@ -4,6 +4,12 @@
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Meta keywords-->
+    <meta name="keywords" content="whisky, whiskey, bebidas, alcohol, licor, labels, tragos, Jhonnie, Walker, etiqueta, negra, black, escoces, scotch">
+    <!--Meta description-->
+    <meta name="description" content="Johnnie Walker Black Label es un whisky escocés blended premium, apreciado por su complejidad y suavidad. Elaborado a partir de una cuidadosa selección de whiskies de malta y grano envejecidos durante al menos 12 años en barricas de roble.">
+    <!--Favicon-->
+    <link rel="shortcut icon" href="./assets/favicon-jhonnie.jpg" type="image/x-icon">
     <title>Jhonnie Walker | Black Label</title>
 </head>
 <body>
