--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
   
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Meta keywords-->
+    <meta name="keywords" content="whisky, whiskey, bebidas, alcohol, licor, labels, tragos, Jhonnie, Walker ">
+    <!--Meta description-->
+    <meta name="description" content="Johnnie Walker es más que solo un whisky; es una leyenda embotellada que encapsula siglos de destreza, pasión y dedicación. Cada sorbo es un viaje a través de las tierras escocesas, donde los aromas ahumados y las notas de especias bailan en perfecta armonía en el paladar. Su distintivo sabor, creado a partir de una cuidadosa mezcla de maltas seleccionadas y granos finos, es un tributo al arte de la destilación. Desde su suave entrada hasta su cálido final, Johnnie Walker es una experiencia que eleva los sentidos y celebra la grandeza del whisky escocés.">
+    <!--Favicon-->
+    <link rel="shortcut icon" href="./assets/favicon-jhonnie.jpg" type="image/x-icon">
     <title>Jhonnie Walker | Keep Walking </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
  <!--Link de CSS-->
