--- a/html/blue-label.html
+++ b/html/blue-label.html
@@ -8,7 +8,8 @@
     <!--Meta description-->
     <meta name="description" content="Johnnie Walker Blue Label es la expresión más exclusiva y prestigiosa de la marca. Se trata de un whisky escocés blended de ultra lujo, elaborado con una selección excepcional de whiskies de malta y grano envejecidos durante al menos 25 años en barricas de roble.">
     <!--Favicon-->
-    <link rel="shortcut icon" href="./assets/favicon-jhonnie.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="/assets/favicon-jhonnie.jpg" type="image/x-icon">
+
     <title>Jhonnie Walker | Blue Label</title>
 </head>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
