--- a/html/black-label.html
+++ b/html/black-label.html
@@ -9,7 +9,7 @@
     <!--Meta description-->
     <meta name="description" content="Johnnie Walker Black Label es un whisky escocés blended premium, apreciado por su complejidad y suavidad. Elaborado a partir de una cuidadosa selección de whiskies de malta y grano envejecidos durante al menos 12 años en barricas de roble.">
     <!--Favicon-->
-    <link rel="shortcut icon" href="/assets/favicon-jhonnie.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/favicon-jhonnie.jpg" type="image/x-icon">
     <title>Jhonnie Walker | Black Label</title>
 </head>
 <body>
