--- a/html/blue-label.html
+++ b/html/blue-label.html
@@ -8,7 +8,7 @@
     <!--Meta description-->
     <meta name="description" content="Johnnie Walker Blue Label es la expresión más exclusiva y prestigiosa de la marca. Se trata de un whisky escocés blended de ultra lujo, elaborado con una selección excepcional de whiskies de malta y grano envejecidos durante al menos 25 años en barricas de roble.">
     <!--Favicon-->
-    <link rel="shortcut icon" href="/assets/favicon-jhonnie.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/favicon-jhonnie.jpg" type="image/x-icon">
 
     <title>Jhonnie Walker | Blue Label</title>
 </head>
