--- a/html/red-label.html
+++ b/html/red-label.html
@@ -9,7 +9,7 @@
     <!--Meta description-->
     <meta name="description" content="Johnnie Walker Red Label es un whisky escocés blended reconocido mundialmente por su sabor distintivo y suavidad. Es una mezcla de whiskies de grano y malta seleccionados, envejecidos en barricas de roble, que le confieren un carácter equilibrado con notas dulces, especiadas y ahumadas.">
     <!--Favicon-->
-    <link rel="shortcut icon" href="/assets/favicon-jhonnie.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/favicon-jhonnie.jpg" type="image/x-icon">
     <title>Jhonnie Walker | Red Label</title>
 </head>
 <body>
