--- a/html/gold-label.html
+++ b/html/gold-label.html
@@ -8,7 +8,7 @@
     <!--Meta description-->
     <meta name="description" content="Johnnie Walker Gold Label es un whisky escocés blended de lujo, reconocido por su elegancia y suavidad excepcional. Elaborado con una mezcla de whiskies de malta y grano envejecidos durante un mínimo de 18 años en barricas de roble.">
     <!--Favicon-->
-    <link rel="shortcut icon" href="/assets/favicon-jhonnie.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/favicon-jhonnie.jpg" type="image/x-icon">
     <title>Jhonnie Walker | Gold Label</title>
 </head> <link rel="stylesheet" href="../css/style.css">
 <body>
